[#72] Fix: 팀 멤버 초대 API 버그 해결